--- a/public/css/collection.css
+++ b/public/css/collection.css
@@ -7,7 +7,7 @@
 .main-banner-collection{
     width: 100%;
     height: 480px;
-    background: url("../images/collection-iPhone_11_1944x.webp") no-repeat center;
+    /*background: url("../images/collection-iPhone_11_1944x.webp") no-repeat center;*/
     background-size: 100%;
     position: relative;
     /* background-color: red; */
@@ -15,6 +15,17 @@
     cursor: pointer;
     transition: transform .5s
 
+}
+.cate_img{
+    width: 100%;
+    height: 480px;
+    /*background: url("../images/collection-iPhone_11_1944x.webp") no-repeat center;*/
+    background-size: 100%;
+    position: relative;
+    /* background-color: red; */
+    opacity: 0.96;
+    cursor: pointer;
+    transition: transform .5s
 }
 .main-banner-collection:hover{
     opacity: 1;
