--- a/public/css/paper-dashboard.css
+++ b/public/css/paper-dashboard.css
@@ -14,6 +14,33 @@
 */
 /*      light colors - used for select dropdown         */
 /*           Social buttons            */
+.overlay1 {
+    position: absolute;
+    /*bottom: 0;*/
+    /*background: rgb(0, 0, 0);*/
+    /*background: rgba(0, 0, 0, 0.5); !* Black see-through *!*/
+    color: #f1f1f1;
+    width: 100%;
+    transition: .5s ease;
+    opacity:0;
+    color: white;
+    font-size: 20px;
+    padding: 20px;
+    text-align: center;
+}
+
+.container:hover .overlay1 {
+    opacity: 1;
+}
+.image-upload{
+
+}
+.image-upload>input {
+    display: none;
+    /*position: relative;*/
+
+}
+
 .ct-blue {
   stroke: #7A9E9F !important;
 }
@@ -8038,7 +8065,7 @@ star {
 }
 
 .card-user .image {
-  border-radius: 8px 8px 0 0;
+  border-radius: 20px 20px 0 0;
   height: 150px;
   position: relative;
   overflow: hidden;
